<resources>
    <string name="app_name">Авто помощник</string>
    <string name="name1">AU</string>
    <string name="name2">TO</string>
    <string name="hint1">Введите марку машины</string>
    <string name="hint2">Введите пробег</string>
    <string name="okay">Далее</string>
    <string name="change">Изменить</string>
    <string name="detail">Название</string>
    <string name="history">Журнал работ</string>
    <string name="km">км</string>
    <string name="weeks">недель</string>
    <string name="todolist">Список работ</string>
    <string name="settings">Задать дату и пробег</string>
    <string name="clear">Сбросить</string>

</resources>
